GNOME Bugzilla – Bug 747886
Crash on resume from suspend
Last modified: 2015-04-15 11:33:17 UTC
gnome-shell (X11) crashes whenever I wake up from suspend or otherwise switch back to the X11 vt: mutter:ERROR:backends/meta-input-settings.c:260:update_mouse_left_handed: assertion failed: (clutter_input_device_get_device_type (device) == CLUTTER_POINTER_DEVICE) (gdb) bt full
+ Trace 234973
mutter 3.16.1.r1.g2e3086e clutter 1.22.0
The following fix has been pushed: 8dfb88b backend: Apply the right settings to the right input devices
Created attachment 301617 [details] [review] backend: Apply the right settings to the right input devices Since 8769b3d55, the checks performed on which update_* function was called for each device got quite more lax, leading to failed asserts on code that assumed the previous behavior. Change update_[mouse|touchpad|trackball]_* to bail out early if the device received has not the right type, and remove the asserts.